# linstall

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
linstall/: console.py
