[tool.poetry]
name = "linstall"
version = "0.1.0"
description = "A Python CLI to generate a list of installation commands for a package to add to README files."
authors = ["João Palmeiro <joaopalmeiro@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
